--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Montserrat&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.2.1/css/all.css" rel="stylesheet">
+  <link href="https://unpkg.com/angular-calendar@0.31.0/css/angular-calendar.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script>
     var global = global || window;
   </script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <!-- <script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script> -->
 </body>
 </html>
