--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>MedStream 360</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/med.png">
+  <!-- <link rel="icon" type="image/x-icon" href="assets/med.png"> -->
+  <link rel="icon" type="image/x-icon" href="assets/360 logo normal.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Montserrat&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
