--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>MedStream 360</title>
@@ -8,8 +9,10 @@
   <!-- <link rel="icon" type="image/x-icon" href="assets/med.png"> -->
   <link rel="icon" type="image/x-icon" href="assets/360 logo normal.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Montserrat&family=Poppins:wght@100;200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Montserrat&family=Poppins:wght@100;200&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.2.1/css/all.css" rel="stylesheet">
   <link href="https://unpkg.com/angular-calendar@0.31.0/css/angular-calendar.css" rel="stylesheet">
@@ -20,8 +23,21 @@
   </script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
   <!-- <script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script> -->
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VC6JWW0G3F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VC6JWW0G3F');
+</script>
+
 </body>
+
 </html>
