changes for accessibility

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
   <title>MedStream 360</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description"
+    content="Learn surgical techniques from global experts! Medstream 360 live streams surgeries by renowned doctors from universities worldwide. Watch live or access edited summaries for in-depth surgical education.">
+  <meta name="keywords"
+    content="surgical techniques, global experts, live surgery, surgical education, medical education, universities, medical schools, doctors, live stream, edited surgery videos, surgical procedures">
+
   <!-- <link rel="icon" type="image/x-icon" href="assets/med.png"> -->
   <link rel="icon" type="image/x-icon" href="assets/360 logo normal.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -30,13 +36,13 @@
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-VC6JWW0G3F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-VC6JWW0G3F');
-</script>
+    gtag('config', 'G-VC6JWW0G3F');
+  </script>
 
 </body>
 
